# vcs

./: .gitignore  CMakeLists.txt  vcs
include/: AddCommand.h  CommandParser.h  Hasher.h  Index.h  ObjectStore.h  Repository.h
src/: AddCommand.cpp  Hasher.cpp  Index.cpp  ObjectStore.cpp  Repository.cpp  main.cpp
